# Marketing-Funnel-Pilot

./: README.md  app.py  pyproject.toml  replit.md
attached_assets/: Pasted--Marketing-Funnel-Analysis-Application-Overview-A-Strea_1777189506535.txt
utils/: ml_simulator.py  plots.py
