[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "duckdb>=1.4.2",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.5",
    "streamlit>=1.51.0",
]
